fix overflow

--- a/SILINK.css
+++ b/SILINK.css
@@ -8,6 +8,7 @@
     padding: 20px;
     border-radius: 3px;
     box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
+    border-top: 10px solid #1a0935;
 }
 
 .titleSILINK {
@@ -72,28 +73,12 @@
 }
 
 .contentSILINK {
-    color: black;
-}
-
-.contentSILINK{
     height: 600px;
-    overflow: auto;
-}
-
-.containerSILINK{
-    border-top: 10px solid #0C7003;
+    color: black;
 }
 
 .picSILINK {
     height: 40px;
-}
-
-.tabSILINK button:hover {
-    filter: opacity(0.5);
-}
-
-.tabSILINK button.active {
-    filter: opacity(0.5) drop-shadow(0 0 0 #1a0935);
 }
 
 .tabSILINK{
@@ -111,11 +96,10 @@
 
 .tabSILINK .tab>input[type="radio"] {
     position: absolute;
-    top: -9999px;
-    left: -9999px;
     border: 0px;
     width: 100%;
     height: 5em;
+    visibility: hidden;
 }
 
 .tabSILINK .tab>label {
@@ -128,7 +112,7 @@
 }
 
 .tabSILINK .tabContentSILINK {
-    z-index: 0;/* or display: none; */
+    z-index: 0;
     padding: 25px;
     position: absolute;
     top: 27px;
@@ -145,7 +129,15 @@
 .tabSILINK>.tab>[id^="tab"]:checked ~ [id^="tab-content"] {
     z-index: 1;/* or display: block; */
     opacity: 1;
-    padding-top: 60px;
+}
+
+.tabContentSILINK {
+    overflow-x: hidden;
+    overflow-y: auto;
+    height: 400px;
+    margin-top: 65px;
+    font-size: 13px;
+    text-align: justify;
 }
 
 .botSILINK {
@@ -166,5 +158,4 @@
     margin-left: auto;
     margin-right: auto;
 }
-
 
